# trellis-document-classification

./: .env  README.md  pyproject.toml
analysis/: doc_exploration.ipynb  pipeline.py
data/: doc_label_encoding.pkl  docs.csv
test/: test_dataset.csv
train/: training_index.faiss
trellis_document_classification/: service.py  service_model_bundle.joblib  service_models.py  test_service.py
